--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ Description: This is website , blog project
     --template-color: #fff;
     --max-width: 100%;
     --primary: #0c7489;
+    --icon-color:rgb(19, 129, 240);
 }
 
 /**********************************************************/
@@ -58,6 +59,7 @@ img {
 img:hover {
     opacity: .9;
     transition: all 2s;
+    cursor: pointer;
 }
 
 p {
@@ -73,7 +75,7 @@ p:hover {
     background-color: var(--template-bg);
     color: var(--template-color);
     transition: all 3s;
-    padding:.5rem .4rem;
+    padding: .5rem .4rem;
 }
 
 .my_clearfix::before {
@@ -95,33 +97,88 @@ p:hover {
 
 /**********************************************************/
 /**Line Clamp *********************************************/
-.line-clamp4{
+.line-clamp4 {
     display: -webkit-box;
     overflow: hidden;
     -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;
 }
-.line-clamp6{
+
+.line-clamp6 {
     display: -webkit-box;
     overflow: hidden;
     -webkit-line-clamp: 6;
     -webkit-box-orient: vertical;
 }
-.line-clamp8{
+
+.line-clamp8 {
     display: -webkit-box;
     overflow: hidden;
     -webkit-line-clamp: 8;
     -webkit-box-orient: vertical;
 }
-.line-clamp10{
+
+.line-clamp10 {
     display: -webkit-box;
     overflow: hidden;
     -webkit-line-clamp: 10;
     -webkit-box-orient: vertical;
 }
-.line-clamp15{
+
+.line-clamp15 {
     display: -webkit-box;
     overflow: hidden;
     -webkit-line-clamp: 15;
     -webkit-box-orient: vertical;
 }
+
+/**********************************************************/
+/**Navbar First********************************************/
+#navbar_first{
+    background-color: black;
+    color: white;
+    max-width: var(--max-width);
+    max-height: 30rem;
+}
+
+/* LEFT */
+.navbar_first_left li{
+    display: inline-block;
+    margin-right: 0.5rem;
+}
+
+.navbar_first_left li a{
+    color:var(--template-color);
+}
+
+/* icon */
+.navbar_first_left li i{
+    font-size: 1rem;
+    margin-right: .2rem;
+    color:var(--icon-color)
+}
+
+/* RIGHT */
+
+/**********************************************************/
+/**Navbar Second********************************************/
+
+
+
+/**********************************************************/
+/**Header**************************************************/
+
+
+
+
+/**********************************************************/
+/**Main****************************************************/
+
+
+
+/**********************************************************/
+/**Back To Top********************************************/
+
+
+/**********************************************************/
+/**Footer**************************************************/
