--- a/style.css
+++ b/style.css
@@ -178,26 +178,23 @@ p:hover {
 /**Navbar Second********************************************/
 
 
-
 /**********************************************************/
 /**Header**************************************************/
-
-
 
 
 /**********************************************************/
 /**Main****************************************************/
 
 
-
 /**********************************************************/
-/**Back To Top********************************************/
+/**Back To Top*********************************************/
 
 
 /**********************************************************/
 /**Footer**************************************************/
 
-/* Register Login Modal
+/* 
+Register Login Modal
 Header 
 Footer 
 Main */
