navbar first second

--- a/style.css
+++ b/style.css
@@ -172,11 +172,17 @@ p:hover {
     transform: rotate(360deg);
 }
 
-/* RIGHT */
+/* offCanvas Login register */
+#login .btn-close{
+    background-color: red;
+}
 
 /**********************************************************/
 /**Navbar Second********************************************/
-
+#navbar_second a i{
+    color:red;
+    font-size: 2.3rem;
+}
 
 /**********************************************************/
 /**Header**************************************************/
@@ -193,7 +199,7 @@ p:hover {
 /**********************************************************/
 /**Footer**************************************************/
 
-/* 
+/* 1699
 Register Login Modal
 Header 
 Footer 
