--- a/style.css
+++ b/style.css
@@ -179,9 +179,17 @@ p:hover {
 
 /**********************************************************/
 /**Navbar Second********************************************/
+
+/* LOGO */
 #navbar_second a i{
     color:red;
     font-size: 2.3rem;
+    box-shadow: 1px 1px 10px 1px rgba(232, 15, 15, 0.8);
+}
+#navbar_second a i:hover{
+    color:rgb(185, 153, 255);
+    font-size: 2.3rem;
+    box-shadow: 1px 1px 10px 1px rgba(232, 15, 15, 0.8);
 }
 
 /**********************************************************/
