--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ Description: This is website , blog project
     --template-color: #fff;
     --max-width: 100%;
     --primary: #0c7489;
-    --icon-color:rgb(19, 129, 240);
+    --icon-color: rgb(19, 129, 240);
+    --template-red: red;
 }
 
 /**********************************************************/
@@ -134,63 +135,86 @@ p:hover {
 
 /**********************************************************/
 /**Navbar First********************************************/
-#navbar_first{
+#navbar_first {
     background-color: black;
     color: white;
     max-width: var(--max-width);
     max-height: 5rem;
 }
 
-.navbar_first_left{
+.navbar_first_left {
     float: left;
 }
 
-.navbar_first_right{
+.navbar_first_right {
     float: right;
 }
 
 /* LEFT & RIGHT  li */
-.navbar_first_left li, .navbar_first_right li{
+.navbar_first_left li,
+.navbar_first_right li {
     display: inline-block;
     margin-right: 0.5rem;
 }
 
 /* LEFT & RIGHT a  */
-.navbar_first_left li a,.navbar_first_right li a{
-    color:var(--template-color);
+.navbar_first_left li a,
+.navbar_first_right li a {
+    color: var(--template-color);
 }
 
 /*  LEFT & RIGHT icon */
-.navbar_first_left li i,.navbar_first_right li i{
+.navbar_first_left li i,
+.navbar_first_right li i {
     font-size: 1.2rem;
     margin-right: .2rem;
-    color:var(--icon-color);
-    
+    color: var(--icon-color);
+
 }
-.navbar_first_left li i:hover,.navbar_first_right li i:hover{
+
+.navbar_first_left li i:hover,
+.navbar_first_right li i:hover {
     transition: 2s all;
     transform: rotate(360deg);
 }
 
 /* offCanvas Login register */
-#login .btn-close{
+#login .btn-close {
     background-color: red;
+}
+
+/*DARK MODE*/
+#dark_mode_id:hover {
+    color: chartreuse;
+}
+
+.dark_mode_class {
+    background-color: var(--template-color);
+    color: var(--template-bg);
 }
 
 /**********************************************************/
 /**Navbar Second********************************************/
 
 /* LOGO */
-#navbar_second a i{
-    color:red;
+#navbar_second a i {
+    color: red;
     font-size: 2.3rem;
     box-shadow: 1px 1px 10px 1px rgba(232, 15, 15, 0.8);
 }
-#navbar_second a i:hover{
-    color:rgb(185, 153, 255);
+
+#navbar_second a i:hover {
+    color: rgb(185, 153, 255);
     font-size: 2.3rem;
     box-shadow: 1px 1px 10px 1px rgba(232, 15, 15, 0.8);
 }
+
+/* SEARCH */
+#search_id:focus {
+    background-color: var(--template-bg);
+    color: var(--template-red);
+}
+
 
 /**********************************************************/
 /**Header**************************************************/
