--- a/style.css
+++ b/style.css
@@ -195,7 +195,6 @@ p:hover {
 
 /**********************************************************/
 /**Navbar Second********************************************/
-
 /* LOGO */
 #navbar_second a i {
     color: red;
@@ -218,7 +217,13 @@ p:hover {
 
 /**********************************************************/
 /**Header**************************************************/
-
+#header{
+    background-image: url('./img/header1.jpg');
+    background-size: cover;
+    z-index:-1;
+height: 88vh;
+padding-top:12rem;
+}
 
 /**********************************************************/
 /**Main****************************************************/
