--- a/style.css
+++ b/style.css
@@ -78,6 +78,9 @@ p:hover {
     color: var(--template-color);
     transition: all 3s;
     padding: .5rem .4rem;
+    opacity: .6;
+    border-radius: 4%;
+    
 }
 
 .my_clearfix::before {
